--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -438,6 +438,7 @@ jobs:
           export PATH=$PATH:$HOME/Library/Python/3.8/bin
           python3 -m pip install -r requirements_test.txt
           python3 examples/algorithm/laplace.py
+          ti diagnose
           TI_LIB_DIR=`python3 -c "import taichi;print(taichi.__path__[0])" | tail -1`
           TI_LIB_DIR="$TI_LIB_DIR/lib" ./build/taichi_cpp_tests
           ti test -vr2 -t4 -x
